src/objects/Round__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Outstanding__c</fullName>
        <formula>Target_Amount__c -  Total_Committed__c</formula>
        <inlineHelpText>Amount outstanding to raise.</inlineHelpText>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Announcement_Date__c</fullName>
        <label>Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Character_for_Cap_Table__c</fullName>
        <label>Character for Cap Table</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Series_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investor_del_del_del_del_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Investments_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Liquidation_Preference__c</fullName>
        <label>Liquidation Preference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Par_Value__c</fullName>
        <description>the nominal value of a bond, share of stock, or a coupon as indicated in writing on the document or specified by charter.</description>
        <inlineHelpText>the nominal value of a bond, share of stock, or a coupon as indicated in writing on the document or specified by charter.</inlineHelpText>
        <label>Par Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Participating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Money_Valuation__c</fullName>
        <inlineHelpText>Value of the company after this round of funding.</inlineHelpText>
        <label>Post-Money Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Money_Valuation__c</fullName>
        <inlineHelpText>Value of company before this round of funding.</inlineHelpText>
        <label>Pre-Money Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promote_Series__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote Series</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <label>Series</label>
        <picklist>
            <picklistValues>
                <fullName>Seed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Series_Type__c</fullName>
        <label>Series Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Price__c</fullName>
        <label>Share Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shares_Outstanding_Pre_round__c</fullName>
        <label>Shares Outstanding (Pre-series)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <inlineHelpText>Targeted amount to raise for this series.</inlineHelpText>
        <label>Target Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Company__c</fullName>
        <label>Target Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Investment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Committed_NonVoting_Shares__c</fullName>
        <label>Total Committed NonVoting Shares</label>
        <summarizedField>Investment__c.Non_Voting_Shares__c</summarizedField>
        <summaryForeignKey>Investment__c.Round__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Committed_Sum_Shares__c</fullName>
        <label>Total Committed Sum Shares</label>
        <summarizedField>Investment__c.Shares1__c</summarizedField>
        <summaryForeignKey>Investment__c.Round__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Committed__c</fullName>
        <inlineHelpText>Total of all Amounts from investments on this series.</inlineHelpText>
        <label>Total Committed $</label>
        <summarizedField>Investment__c.Amount1__c</summarizedField>
        <summaryForeignKey>Investment__c.Round__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invest_Dollars__c</fullName>
        <formula>Total_Invest_Shares__c * Share_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total $ amount the investor has committed to this series.</inlineHelpText>
        <label>OLD Total Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invest_Shares__c</fullName>
        <description>The total number of investor shares.</description>
        <label>Total Committed Voting Shares</label>
        <summarizedField>Investment__c.Shares__c</summarizedField>
        <summaryForeignKey>Investment__c.Round__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Round__c</fullName>
        <formula>Total_Invest_Shares__c *   Share_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLD Total Series</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Target_Shares__c</fullName>
        <description>The amount that the target company or portfolio company wants to raise in this round.</description>
        <inlineHelpText>The amount that the target company or portfolio company wants to raise in this round.</inlineHelpText>
        <label>Total Target Shares</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>voting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This series is voting or non-voting rounds/series.</description>
        <label>voting</label>
        <type>Checkbox</type>
    </fields>
    <label>Series</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rounds</fullName>
        <columns>NAME</columns>
        <columns>Target_Company__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Share_Price__c</columns>
        <columns>Total_Invest_Shares__c</columns>
        <filterScope>Everything</filterScope>
        <label>Rounds</label>
    </listViews>
    <nameField>
        <displayFormat>Round{00000}</displayFormat>
        <label>Investment Series</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Series</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>